# libvoxel

./: .gitignore  Cargo.toml  README.md  linklib.sh
.cargo/: config
shaders/: block_fragment.glsl  block_vertex.glsl  crosshair_fragment.glsl  crosshair_vertex.glsl  cube_fragment.glsl  cube_vertex.glsl  gbuffer_fragment.glsl  gbuffer_lighting_fragment.glsl  gui_fragment.glsl  gui_vertex.glsl  inventory_fragment.glsl  inventory_vertex.glsl  postprocess_fragment.glsl  postprocess_vertex.glsl
src/: engine.rs  java_interface.rs  lib.rs
src/engine/: block.rs  camera.rs  core.rs  engine.rs  inventory.rs  macros.rs  mesh.rs  meshgen.rs  mod.rs  player.rs  shader.rs  vectormath.rs  workers.rs  world.rs
src/engine/entity/: mod.rs
src/engine/player/: camera.rs  gui.rs  inventory.rs  mod.rs
src/engine/renderer/: mesh.rs  meshgen.rs  mod.rs  postprocess.rs  render_texture.rs  shader.rs  vertex.rs
src/engine/world/: mod.rs
src/entity/: gameobject.rs  mod.rs
src/graphics/: gui.rs  mesh.rs  meshgen.rs  mod.rs  postprocess.rs  render_texture.rs  setup.rs  vertex.rs
src/physics/: collision.rs  mod.rs  vectormath.rs
src/player/: camera.rs  gui.rs  mod.rs
src/renderer/: gbuffer.rs  mesh.rs  meshgen.rs  mod.rs  postprocess.rs  render_texture.rs  screen_quad.rs  shader.rs  vertex.rs
src/world/: block.rs  mod.rs
