[package]
name = "libvoxel"
version = "0.1.0"
edition = "2018"
target_os = "android"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.5", default-features = false }
gl = "*"

# rust-analyzer.cargo.target_os = "android"

[lib]
name = "voxel"
crate-type = ["dylib"]