[package]
name = "libvoxel"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[target.'cfg(target_os="android")'.dependencies]
gl = "*"
egli = "0.5.0"
jni = { version = "0.5", default-features = false }
android-ndk = "*"
image = "*"
cgmath = "*"
rand = "0.7.3"
noise = "0.7.0"

[lib]
name = "voxel"
crate-type = ["dylib"]

[build]
target_os = "android"