[package]
name = "libvoxel"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "*"
image = "*"
cgmath = "*"
rand = "0.7.3"
noise = "0.7.0"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.5", default-features = false }
android_log = "*"
log = "*"
egli = "0.5.0"

[lib]
name = "voxel"
crate-type = ["dylib","lib"]

[build]
target_os = "android"